--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -305,6 +305,11 @@
   </form>
 <!--Aqui termina-->
 {% endif %}
+
+
+<!--Empieza la vista telefono-->
+
+
   <div class="mobile-bottom-navigation">
 
     <button class="action-btn" data-mobile-menu-open-btn>
@@ -570,5 +575,33 @@
       </ul>
 
     </div>
+<script>
+// mobile menu variables
+const mobileMenuOpenBtn = document.querySelectorAll('[data-mobile-menu-open-btn]');
+const mobileMenu = document.querySelectorAll('[data-mobile-menu]');
+const mobileMenuCloseBtn = document.querySelectorAll('[data-mobile-menu-close-btn]');
+const overlay = document.querySelector('[data-overlay]');
+
+for (let i = 0; i < mobileMenuOpenBtn.length; i++) {
+
+  // mobile menu function
+  const mobileMenuCloseFunc = function () {
+    mobileMenu[i].classList.remove('active');
+    overlay.classList.remove('active');
+  }
+
+  mobileMenuOpenBtn[i].addEventListener('click', function () {
+    mobileMenu[i].classList.add('active');
+    overlay.classList.add('active');
+  });
+
+  mobileMenuCloseBtn[i].addEventListener('click', mobileMenuCloseFunc);
+  overlay.addEventListener('click', mobileMenuCloseFunc);
+
+}
+
+
+</script>
+
 
   </nav>
