--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -314,28 +314,33 @@
 
     <button class="action-btn" data-mobile-menu-open-btn>
       <ion-icon name="menu-outline"></ion-icon>
-    </button>
-
-    <button class="action-btn">
+  </button>
+  
+  <a class="action-btn" href="{% url 'carro:ver_carro' %}">
       <ion-icon name="bag-handle-outline"></ion-icon>
-
       <span class="count">{{ request.session.carro|length }}</span>
-    </button>
-
-    <button class="action-btn">
+  </a>
+  
+  <a class="action-btn" href="{% url 'products:list' %}">
       <ion-icon name="home-outline"></ion-icon>
-    </button>
-
-
-      <a class="action-btn" href="{% url 'products:list' %}?liked_product={{ cantidad_like }}">
+  </a>
+  
+  <a class="action-btn" href="{% url 'products:list' %}?liked_product={{ cantidad_like }}">
       <ion-icon name="heart-outline"></ion-icon>
-
       <span class="count">{{ cantidad_like }}</span>
-    </a>
+  </a>
 
-    <button class="action-btn" data-mobile-menu-open-btn>
-      <ion-icon name="grid-outline"></ion-icon>
-    </button>
+  
+    {% if request.user.is_authenticated %}
+    <a class="action-btn" data-mobile-menu-open-btn href="{% url 'usuario:logout' %}">
+      <ion-icon name="log-out-outline"></ion-icon>
+  </a>
+  {% else %}
+  <a class="action-btn" data-mobile-menu-open-btn href="{% url 'usuario:login' %}">
+    <ion-icon name="person-outline"></ion-icon>
+  </a>
+  {% endif %}
+  
 
   </div>
 
@@ -352,199 +357,81 @@
     <ul class="mobile-menu-category-list">
 
       <li class="menu-category">
-        <a href="#" class="menu-title">Home</a>
+        <a href="{% url 'products:list' %}" class="menu-title">Home</a>
       </li>
+
+     
 
       <li class="menu-category">
-
-        <button class="accordion-menu" data-accordion-btn>
-          <p class="menu-title">Men's</p>
-
-          <div>
-            <ion-icon name="add-outline" class="add-icon"></ion-icon>
-            <ion-icon name="remove-outline" class="remove-icon"></ion-icon>
-          </div>
-        </button>
-
-        <ul class="submenu-category-list" data-accordion>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Shirt</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Shorts & Jeans</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Safety Shoes</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Wallet</a>
-          </li>
-
-        </ul>
-
-      </li>
-
+        {% for clasification in classifications %}
+            {% if clasification.productos_padre.count > 0 %}
+                <div class="accordion-menu" data-accordion-btn>
+                    <a href="{% url 'products:list' %}?classification_id_padre={{ clasification.id }}" class="menu-title">
+                        <p>{{ clasification.nombre }}</p>
+                    </a>
+                    <div>
+                        <ion-icon name="add-outline" class="add-icon"></ion-icon>
+                        <ion-icon name="remove-outline" class="remove-icon"></ion-icon>
+                    </div>
+                </div>
+    
+                {% if clasification.hijos.all %}
+                    <ul class="submenu-category-list" data-accordion>
+                        {% for child_classification in clasification.hijos.all %}
+                            {% if child_classification.pro.exists %}
+                                <li class="submenu-category">
+                                    <a href="{% url 'products:list' %}?classification_id={{ child_classification.id }}" class="sidebar-submenu-title submenu-title">
+                                        {{ child_classification.nombre }}
+                                    </a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+    </li>
+    
+ 
+      {% if request.user.username %}
       <li class="menu-category">
-
-        <button class="accordion-menu" data-accordion-btn>
-          <p class="menu-title">Women's</p>
-
-          <div>
-            <ion-icon name="add-outline" class="add-icon"></ion-icon>
-            <ion-icon name="remove-outline" class="remove-icon"></ion-icon>
-          </div>
-        </button>
-
-        <ul class="submenu-category-list" data-accordion>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Dress & Frock</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Earrings</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Necklace</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Makeup Kit</a>
-          </li>
-
-        </ul>
-
+          <a href="{% url 'pedidos_stripe:purchases_stripe' %}" class="menu-title">Pedidos Stripe</a>
       </li>
-
-      <li class="menu-category">
-
-        <button class="accordion-menu" data-accordion-btn>
-          <p class="menu-title">Jewelry</p>
-
-          <div>
-            <ion-icon name="add-outline" class="add-icon"></ion-icon>
-            <ion-icon name="remove-outline" class="remove-icon"></ion-icon>
-          </div>
-        </button>
-
-        <ul class="submenu-category-list" data-accordion>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Earrings</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Couple Rings</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Necklace</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Bracelets</a>
-          </li>
-
-        </ul>
-
-      </li>
-
-      <li class="menu-category">
-
-        <button class="accordion-menu" data-accordion-btn>
-          <p class="menu-title">Perfume</p>
-
-          <div>
-            <ion-icon name="add-outline" class="add-icon"></ion-icon>
-            <ion-icon name="remove-outline" class="remove-icon"></ion-icon>
-          </div>
-        </button>
-
-        <ul class="submenu-category-list" data-accordion>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Clothes Perfume</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Deodorant</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Flower Fragrance</a>
-          </li>
-
-          <li class="submenu-category">
-            <a href="#" class="submenu-title">Air Freshener</a>
-          </li>
-
-        </ul>
-
-      </li>
-
-      <li class="menu-category">
-        <a href="#" class="menu-title">Blog</a>
-      </li>
-
-      <li class="menu-category">
-        <a href="#" class="menu-title">Hot Offers</a>
-      </li>
-
+  {% endif %}
+  
     </ul>
 
     <div class="menu-bottom">
-
+      {% if request.user.username %}
+      {% if request.user.usuario.rol.nombre == 'Proveedor' %}
       <ul class="menu-category-list">
 
         <li class="menu-category">
-
           <button class="accordion-menu" data-accordion-btn>
-            <p class="menu-title">Language</p>
-
-            <ion-icon name="caret-back-outline" class="caret-back"></ion-icon>
-          </button>
-
-          <ul class="submenu-category-list" data-accordion>
-
-            <li class="submenu-category">
-              <a href="#" class="submenu-title">English</a>
-            </li>
-
-            <li class="submenu-category">
-              <a href="#" class="submenu-title">Espa&ntilde;ol</a>
-            </li>
-
-            <li class="submenu-category">
-              <a href="#" class="submenu-title">Fren&ccedil;h</a>
-            </li>
-
-          </ul>
-
-        </li>
-
-        <li class="menu-category">
-          <button class="accordion-menu" data-accordion-btn>
-            <p class="menu-title">Currency</p>
+            <p class="menu-title">Productos</p>
             <ion-icon name="caret-back-outline" class="caret-back"></ion-icon>
           </button>
 
           <ul class="submenu-category-list" data-accordion>
             <li class="submenu-category">
-              <a href="#" class="submenu-title">USD &dollar;</a>
+              <a href="{% url 'products:create' %}" class="submenu-title">Nuevo Producto </a>
             </li>
 
             <li class="submenu-category">
-              <a href="#" class="submenu-title">EUR &euro;</a>
+              <a href="{% url 'products:mis_productos' %}" class="submenu-title">Mis Productos</a>
+            </li>
+
+            <li class="submenu-category">
+              <a href="{% url 'pedidos_stripe:ventas' %}" class="submenu-title">Ventas</a>
             </li>
           </ul>
         </li>
+
+
 
       </ul>
+      {% endif %}
+      {% endif %}
 
       <ul class="menu-social-container">
 
