agregado captcha a iniiciar sesion , crear cuenta y rate product

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
     {% include 'base/js.html' %}
     <title>{% block head_title %}Micro eCommerce{% endblock head_title %}</title>
    
-    
+    <head>
+  <script src="https://www.google.com/recaptcha/enterprise.js?render={{ site_key }}"></script>
+</head>
 </head>
 
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
