--- a/templates/usuario/create.html
+++ b/templates/usuario/create.html
@@ -220,8 +220,9 @@
 <div class="login-container">
     <div class="login-info-container">
         <h1 class="title">Crear Cuenta</h1>
-        <form class="inputs-container" action="{% url 'usuario:create' %}" method="post">
+        <form class="inputs-container" id="create_user" action="{% url 'usuario:create' %}" method="post">
             {% csrf_token %}
+         <input type="hidden" name="g-recaptcha-response" id='recaptcha'>
             {% for field in form %}
             <div style="position: relative;">
                 <label for="{{ field.id_for_label }}" style="display: block; margin-bottom: 4px; font-size: 14px; color: #333;">{{ field.label }}</label>
@@ -242,5 +243,30 @@
     </div>
     <img class="image-container" src="{% static 'img/nana.png' %}" alt="">
 </div>
+
+
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+
+
+        <script src="https://www.google.com/recaptcha/api.js?render={{ site_key }}"></script>
+        <script>
+
+          grecaptcha.ready(function() {
+
+              $('#create_user').submit(function(e){
+                  var form = this;
+
+                  e.preventDefault()
+                  grecaptcha.execute('{{ site_key }}', {action: 'create_user'}).then(function(token) {
+
+                      $('#recaptcha').val(token)
+
+                      form.submit()
+                  });
+              })
+
+          });
+         </script>
 
 {%endblock%}
