arreglado el error de que no le da el rol de cliente a los usuarios nuevos y cuando se filtra los productos quitar todas las add

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <title>{% block head_title %}Micro eCommerce{% endblock head_title %}</title>
    
     <head>
-  <script src="https://www.google.com/recaptcha/enterprise.js?render={{ site_key }}"></script>
+{#  <script src="https://www.google.com/recaptcha/enterprise.js?render={{ site_key }}"></script>#}
 </head>
 </head>
 
