--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -293,9 +293,9 @@
 {#          <a href="#" class="menu-title">Blog</a>#}
 {#        </li>#}
 
-        <li class="menu-category">
-          <a href="#" class="menu-title">Mejores Ofertas</a>
-        </li>
+{#        <li class="menu-category">#}
+{#          <a href="#" class="menu-title">Mejores Ofertas</a>#}
+{#        </li>#}
 
       </ul>
 
